Add comprehensive tests for SparkOpInstance2