@@ -7,31 +7,53 @@ ThisBuild / organizationName := "example"
 
 resolvers += "Maven Central" at "https://repo1.maven.org/maven2"
 
+lazy val commonSettings = Seq(
+  Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.ScalaLibrary,
+  Test / fork := true,
+  Test / javaOptions ++= Seq(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+    "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+  )
+)
+
 lazy val commonClasses = (project in file("platform/common-classes"))
   .settings(
+    commonSettings,
     name := "Common Classes",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.9" % Test,
       "org.apache.spark" %% "spark-core" % "3.5.1" % Provided,
       "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided
-    ),
-    Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.ScalaLibrary
+    )
   )
 
 lazy val domainA = (project in file("subdomains/domain-A"))
   .settings(
+    commonSettings,
     name := "Domain A",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.9" % Test,
       "org.apache.spark" %% "spark-core" % "3.5.1" % Provided,
       "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided
-    ),
-    Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.ScalaLibrary
+    )
   )
   .dependsOn(commonClasses)
 
 lazy val subdomain1to4 = (project in file("subdomains/1to4"))
   .settings(
+    commonSettings,
     name := "Subdomain 1to4",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.9" % Test,
@@ -39,8 +61,7 @@ lazy val subdomain1to4 = (project in file("subdomains/1to4"))
       "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided
     ),
     Compile / scalaSource := baseDirectory.value / "src" / "main" / "scala",
-    Test / scalaSource := baseDirectory.value / "src" / "test" / "scala",
-    Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.ScalaLibrary
+    Test / scalaSource := baseDirectory.value / "src" / "test" / "scala"
   )
   .dependsOn(commonClasses)
 
@@ -48,6 +69,7 @@ lazy val root = (project in file("."))
   .aggregate(commonClasses, domainA, subdomain1to4)
   .dependsOn(commonClasses, subdomain1to4)
   .settings(
+    commonSettings,
     name := "Testing Devin Code Migrations Scala",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.9" % Test,
@@ -55,6 +77,5 @@ lazy val root = (project in file("."))
       "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided,
       "org.scalameta" %% "munit" % "0.7.29" % Test
     ),
-    Test / scalaSource := baseDirectory.value / "src" / "test" / "scala",
-    Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.ScalaLibrary
+    Test / scalaSource := baseDirectory.value / "src" / "test" / "scala"
   )
